--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -3,8 +3,9 @@ title: Welcome to Middleman
 ---
 
 <div class="welcome">
-  <h1>Middleman is Watching</h1>
-  <p class="doc">
-    <%= link_to "Read Online Documentation", "http://middlemanapp.com/" %>
-  </p><!-- .doc -->
+  <h1>Friends Don't Let Friends Go On Bad Dates</h1>
+  <h2>...Have You Met My Friend?</h2>
+  <p>
+  Coming Soon To A City Near You
+  </p>
 </div><!-- .welcome -->
