--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -2,7 +2,7 @@
 title: Welcome to Middleman
 ---
 
-<div class="welcome">
+<div>
   <h1>Friends Don't Let Friends Go On Bad Dates</h1>
   <h2>...Have You Met My Friend?</h2>
   <p>
