--- a/source/stylesheets/all.css
+++ b/source/stylesheets/all.css
@@ -13,7 +13,7 @@ h1 {
   text-transform: uppercase;
   text-shadow: 0 1px 0 rgba(255, 255, 255, .5);
   #background: url("../images/middleman.png") no-repeat center 100px;
-  #padding: 150px 0 10px;
+  padding: 150px 0 10px;
   margin: 0; }
 
 .doc {
