--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -8,4 +8,7 @@ title: Have You Met My Friend?
   <p>
   Coming Soon To A City Near You
   </p>
+  <body>
+  <p>Request an invite here: <%= mail_to 'haveumetmyfriend@gmail.com', "Waiting List RSVP" %></p>
+</body>
 </div><!-- .welcome -->
