--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -9,6 +9,6 @@ title: Have You Met My Friend?
   Coming Soon To A City Near You
   </p>
   <body>
-  <p>Request an invite here: <%= mail_to 'haveumetmyfriend@gmail.com', "Waiting List RSVP" %></p>
+  <p>Request an invite here: <%= mail_to 'haveumetmyfriend@gmail.com?subject=Waiting List RSVP', "Waiting List RSVP" %></p>
 </body>
 </div><!-- .welcome -->
